Fix warnings running tests on Java 9 or above.